tests/samples/negative/control_flow/if_condition_bool.ax
module if_condition_bool;

fn main() -> i32 {
    if 1 {
        return 1;
    }
    return 0;
}
